# fireemblem-ctl

./: .gitignore  pyproject.toml
fireemblem_ctl/: control.py  fireemblem.py  vba.py
tests/: test_fireemblem_ctl.py
tools/: Fire Emblem (U).sav  vba.ini
